--- a/css/authorization.css
+++ b/css/authorization.css
@@ -1,23 +1,95 @@
-*{
-    padding: 0;
-    margin: 0;
+.overlay {
+    background-color: rgba(0, 0, 0, 0.9);
+    bottom: 0;
+    cursor: default;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: 1;
+
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+    -ms-transition: opacity .5s;
+    -o-transition: opacity .5s;
+    transition: opacity .5s;
 }
 
-body {
-    background: #2b3542;
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
 }
+.popup {
+    width: 330px;
+    height: 200px;
+    background-color: #fff;
+    display: inline-block;
+    left: 50%;
+    opacity: 0;
+    padding: 15px;
+    position: fixed;
+    text-align: justify;
+    top: 40%;
+    visibility: hidden;
+    z-index: 10;
 
-.background-wrapper {
- 
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -moz-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -ms-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -o-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+
+    -webkit-transition: opacity .5s, top .5s;
+    -moz-transition: opacity .5s, top .5s;
+    -ms-transition: opacity .5s, top .5s;
+    -o-transition: opacity .5s, top .5s;
+    transition: opacity .5s, top .5s;
+}
+.overlay:target+.popup {
+    top: 50%;
+    opacity: 1;
+    visibility: visible;
+}
+.close {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    text-decoration: none;
+    top: -15px;
+    width: 30px;
+}
+.close:before {
+    color: rgba(255, 255, 255, 0.9);
+    content: "X";
+    font-size: 24px;
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+}
+.close:hover {
+    background-color: orangered;
 }
 
 .form-login {
     width: 200px;
     height: 40px;
     z-index: 0;
-    padding: 30px 30px 30px 30px;
-    margin-top: 10%;
-    margin-left: 35%;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.autho {
+    font-size: 28px;
+    color: #1E90FF;
 }
 
 .to-send {
@@ -54,9 +126,4 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     margin-top: 15px;
-}
-
-.autho {
-    font-size: 28px;
-    color: white;
 }
