--- a/x64/Debug/css/index.css
+++ b/x64/Debug/css/index.css
@@ -227,3 +227,21 @@ li {
     font-family: Century Gothic;
     color:black;
 }
+
+/* disabled JS */
+.d-js{
+    width:100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.75);
+    overflow:hidden;
+    position:fixed;
+    top:0px;
+}
+.d-js .d-js-content{
+    margin:50px auto 0px auto;
+    width:300px;
+    height: 40px;
+    padding:10px;
+    background-color: #c5c5c5;
+    box-shadow: 0px 0px 10px #000;
+}
