--- a/x64/Debug/css/index.css
+++ b/x64/Debug/css/index.css
@@ -245,3 +245,56 @@ li {
     background-color: #c5c5c5;
     box-shadow: 0px 0px 10px #000;
 }
+
+/*PRELOADER STYLE AND SVG*/
+#hellopreloader>p{
+    display:none;
+    }
+#hellopreloader_preload {
+    display: block;position: 
+    fixed;z-index: 99999;top: 0;
+    left: 0;width: 100%;
+    height: 100%;
+    min-width: 1000px;
+    background: #90C695 url(
+
+	'data:image/svg+xml;utf8, <svg width="44" height="44" viewBox="0 0 44 44" xmlns="http://www.w3.org/2000/svg" stroke="#fff"> \
+		<g fill="none" fill-rule="evenodd" stroke-width="2"> \
+			<circle cx="22" cy="22" r="1"> \
+				<animate attributeName="r" \
+					begin="0s" dur="1.8s" \
+					values="1; 20" \
+					calcMode="spline" \
+					keyTimes="0; 1" \
+					keySplines="0.165, 0.84, 0.44, 1" \
+					repeatCount="indefinite" /> \
+				<animate attributeName="stroke-opacity" \
+					begin="0s" dur="1.8s" \
+					values="1; 0" \
+					calcMode="spline" \
+					keyTimes="0; 1" \
+					keySplines="0.3, 0.61, 0.355, 1" \
+					repeatCount="indefinite" /> \
+			</circle> \
+			<circle cx="22" cy="22" r="1"> \
+				<animate attributeName="r" \
+					begin="-0.9s" dur="1.8s" \
+					values="1; 20" \
+					calcMode="spline" \
+					keyTimes="0; 1" \
+					keySplines="0.165, 0.84, 0.44, 1" \
+					repeatCount="indefinite" /> \
+				<animate attributeName="stroke-opacity" \
+					begin="-0.9s" dur="1.8s" \
+					values="1; 0" \
+					calcMode="spline" \
+					keyTimes="0; 1" \
+					keySplines="0.3, 0.61, 0.355, 1" \
+					repeatCount="indefinite" /> \
+			</circle> \
+		</g> \
+	</svg> ' 
+	) center center no-repeat;
+
+    background-size:95px;
+}
